@@ -1148,23 +1148,8 @@ riscv_add_implicit_subset (riscv_subset_list_t *subset_list,
     }
 }
 
-/* These extensions are added to the subset list for special purposes,
-   with the explicit versions or the RISCV_UNKNOWN_VERSION versions.
-   Therefore, we won't output them to the output arch string in the
-   riscv_arch_str1, if the versions are unknown.  */
-
-static bfd_boolean
-riscv_ext_dont_care_version (const char *subset)
-{
-  if (strcmp (subset, "g") == 0
-      || strcmp (subset, "zicsr") == 0
-      || strcmp (subset, "zifencei") == 0)
-    return TRUE;
-  return FALSE;
-}
-
-/* We have to add all arch string extensions first, and then start to
-   add their implicit extensions.  The arch string extensions must be
+/* We have to add all extensions from ISA string first, and then start to
+   add their implicit extensions.  The extensions from ISA string must be
    set in order, so we can add them to the last of the subset list
    directly, without searching.
 
@@ -1187,15 +1172,11 @@ riscv_parse_add_subset (riscv_parse_subset_t *rps,
       && rps->get_default_version != NULL)
     rps->get_default_version (subset, &major_version, &minor_version);
 
-  if (!riscv_ext_dont_care_version (subset)
+  /* We don't care the versions of the implicit extensions.  */
+  if (!implicit
       && (major_version == RISCV_UNKNOWN_VERSION
 	  || minor_version == RISCV_UNKNOWN_VERSION))
     {
-      /* We only add the implicit extension if it is supported in the
-	 chosen ISA spec.  */
-      if (implicit)
-	return;
-
       if (subset[0] == 'x')
 	rps->error_handler
 	  (_("x ISA extension `%s' must be set with the versions"),
@@ -1355,12 +1336,7 @@ riscv_parse_std_ext (riscv_parse_subset_t *rps,
 					  &minor_version, TRUE);
 	riscv_parse_add_subset (rps, "e",
 				major_version,
-				minor_version, FALSE);
-	/* i-ext must be enabled.  */
-	riscv_parse_add_subset (rps, "i",
-				RISCV_UNKNOWN_VERSION,
-				RISCV_UNKNOWN_VERSION, FALSE);
-
+				minor_version, false);
 	if (*rps->xlen > 32)
 	  {
 	    rps->error_handler
@@ -1373,14 +1349,9 @@ riscv_parse_std_ext (riscv_parse_subset_t *rps,
       case 'g':
 	p = riscv_parsing_subset_version (rps, march, ++p,
 					  &major_version,
-					  &minor_version, TRUE);
-	/* i-ext must be enabled.  */
+					  &minor_version, true);
+	/* Expand g to imafd.  */
 	riscv_parse_add_subset (rps, "i",
-				RISCV_UNKNOWN_VERSION,
-				RISCV_UNKNOWN_VERSION, FALSE);
-	/* g-ext is used to add the implicit extensions, but will
-	   not be output to the arch string.  */
-	riscv_parse_add_subset (rps, "g",
 				major_version,
 				minor_version, FALSE);
 	for ( ; *std_exts != 'q'; std_exts++)
@@ -1390,6 +1361,10 @@ riscv_parse_std_ext (riscv_parse_subset_t *rps,
 				    RISCV_UNKNOWN_VERSION,
 				    RISCV_UNKNOWN_VERSION, FALSE);
 	  }
+	/* Add g as an implicit extension.  */
+	riscv_parse_add_subset (rps, "g",
+				RISCV_UNKNOWN_VERSION,
+				RISCV_UNKNOWN_VERSION, true);
 	break;
 
       default:
@@ -1722,8 +1697,13 @@ riscv_parse_add_implicit_subsets (riscv_parse_subset_t *rps)
 {
   riscv_subset_t *subset = NULL;
 
+  if (riscv_lookup_subset (rps->subset_list, "e", &subset))
+    riscv_parse_add_subset (rps, "i",
+			    RISCV_UNKNOWN_VERSION,
+			    RISCV_UNKNOWN_VERSION, true);
+
   /* Add the zicsr and zifencei only when the i's version less than 2.1.  */
-  if ((riscv_lookup_subset (rps->subset_list, "i", &subset))
+  if (riscv_lookup_subset (rps->subset_list, "i", &subset)
       && (subset->major_version < 2
 	  || (subset->major_version == 2
 	      && subset->minor_version < 1)))
@@ -1736,7 +1716,7 @@ riscv_parse_add_implicit_subsets (riscv_parse_subset_t *rps)
 			      RISCV_UNKNOWN_VERSION, TRUE);
     }
 
-  if ((riscv_lookup_subset (rps->subset_list, "q", &subset)))
+  if (riscv_lookup_subset (rps->subset_list, "q", &subset))
     {
       riscv_parse_add_subset (rps, "d",
 			      RISCV_UNKNOWN_VERSION,
@@ -1748,7 +1728,7 @@ riscv_parse_add_implicit_subsets (riscv_parse_subset_t *rps)
 			      RISCV_UNKNOWN_VERSION,
 			      RISCV_UNKNOWN_VERSION, TRUE);
     }
-  else if ((riscv_lookup_subset (rps->subset_list, "d", &subset)))
+  else if (riscv_lookup_subset (rps->subset_list, "d", &subset))
     {
       riscv_parse_add_subset (rps, "f",
 			      RISCV_UNKNOWN_VERSION,
@@ -1757,12 +1737,12 @@ riscv_parse_add_implicit_subsets (riscv_parse_subset_t *rps)
 			      RISCV_UNKNOWN_VERSION,
 			      RISCV_UNKNOWN_VERSION, TRUE);
     }
-  else if ((riscv_lookup_subset (rps->subset_list, "f", &subset)))
+  else if (riscv_lookup_subset (rps->subset_list, "f", &subset))
     riscv_parse_add_subset (rps, "zicsr",
 			    RISCV_UNKNOWN_VERSION,
 			    RISCV_UNKNOWN_VERSION, TRUE);
 
-  if ((riscv_lookup_subset (rps->subset_list, "g", &subset)))
+  if (riscv_lookup_subset (rps->subset_list, "g", &subset))
     {
       riscv_parse_add_subset (rps, "zicsr",
 			      RISCV_UNKNOWN_VERSION,
